--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -192,7 +192,7 @@
 					<p><b>CDN</b>
 					<code><pre>https://cdn.vectorly.io/upscaler/latest/vectorly-[version].js</pre></code>
 
-					There are various versions available, including the <code>vectorly-standalone.js</code> library, as well as plugins for different HTML5 video players. You can find version specific installation instructions <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/">here</a>.
+					There are various versions available, including the <code>vectorly-upscaler.js</code> library, as well as plugins for different HTML5 video players. You can find version specific installation instructions <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/">here</a>.
 
 				     <section class="docs-section" id="item-2-1">
 						<h2 class="section-heading">Hello World</h2>
@@ -245,7 +245,7 @@
 						<h4 class="section-heading" id="item-3-usage">Basic usage</h4>
 
 
-						 <p>For the <code>vectorly-standalone.js</code> library, the basic API involves instantiating a <code>vectorlyUpscaler</code> object, and specifying a <code>video</code> element.</p>
+						 <p>For the <code>vectorly-upscaler.js</code> library, the basic API involves instantiating a <code>vectorlyUpscaler</code> object, and specifying a <code>video</code> element.</p>
 
 
 
@@ -268,7 +268,7 @@
 
 
 						<h4 class="section-heading" id="item-3-plugins">Plugins</h4>
-						Besides the <code>vectorly-standalone.js</code> library, we have several plugins for specific HTML5 players. (see the <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">full API</a> for more detail).
+						Besides the <code>vectorly-upscaler.js</code> library, we have several plugins for specific HTML5 players. (see the <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">full API</a> for more detail).
 
 
 						<p>
