Replace the cdn link

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -190,7 +190,7 @@
 					</p>
 
 					<p><b>CDN</b>
-					<code><pre>https://cdn.vectorly.io/upscaler/latest/vectorly-[version].js</pre></code>
+					<code><pre>https://cdn.vectorly.io/upscaler/v2/latest/vectorly-upscaler.js</pre></code>
 
 					There are various versions available, including the <code>vectorly-upscaler.js</code> library, as well as plugins for different HTML5 video players. You can find version specific installation instructions <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/">here</a>.
 
