reworded gello world example

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -196,13 +196,14 @@
 
 				     <section class="docs-section" id="item-2-1">
 						<h2 class="section-heading">Hello World</h2>
-						 <p>The easiest way to get started with upscaling is by using our VideoJS javascript plugin. Just include <code>vectorly-videojs.js</code> in the repository (and the model files and weights), and you should be able to instantly see the video playing</p>
-						<p><code><pre>
+						 <p>The fastest way to get upscaling that "Just works" is to use the <code>vectorly-videojs.js</code>. If you load the following code and you should be able to instantly see the video playing
+
+						<code><pre>
 
    &lt;head&gt;
        &lt;link href=&quot;https://vjs.zencdn.net/7.10.2/video-js.css&quot; rel=&quot;stylesheet&quot; /&gt;
        &lt;script src=&quot;https://vjs.zencdn.net/7.10.2/video.min.js&quot;&gt;&lt;/script&gt;
-     &lt;script src=&quot;https://cdn.vectorly.io/upscaler/latest/vectorly-videojs.js&quot;&gt;&lt;/script&gt;
+     &lt;script src=&quot;https://cdn.vectorly.io/upscaler/v2/latest/vectorly-videojs.js&quot;&gt;&lt;/script&gt;
    &lt;/head&gt;
 
    &lt;body&gt;
@@ -228,6 +229,9 @@
      &lt;/script&gt;
    &lt;/body&gt;
 						 </pre></code></p>
+						 <p>Make sure you add the token, and verify that "Upscaler initialized" is being displayed in the console.log, to verify it's working. You can see a working example on <a href="https://codepen.io/sb2702/pen/ExZNLZG">Code Pen</a>.  </p>
+
+
 						 <p>For other players, scroll down to the <a class="scrollto" href="#section-3"> web section</a> or see the full API <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">here</a> </p>
 
 					</section><!--//section-->
