Added more minor edits to hello world section

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -196,7 +196,7 @@
 
 				     <section class="docs-section" id="item-2-1">
 						<h2 class="section-heading">Hello World</h2>
-						 <p>The fastest way to get upscaling that "Just works" is to use the <code>vectorly-videojs.js</code>. If you load the following code and you should be able to instantly see the video playing
+						 <p>The fastest way to get upscaling that "Just works" is to use the <code>vectorly-videojs.js</code> videoJS plugin. If you load the following code and you should be able to instantly see the video playing
 
 						<code><pre>
 
@@ -229,7 +229,7 @@
      &lt;/script&gt;
    &lt;/body&gt;
 						 </pre></code></p>
-						 <p>Make sure you add the token, and verify that "Upscaler initialized" is being displayed in the console.log, to verify it's working. You can see a working example on <a href="https://codepen.io/sb2702/pen/ExZNLZG">Code Pen</a>.  </p>
+						 <p>Make sure you add your token, and verify that "Upscaler initialized" is being displayed in the console.log, in order to know that it's working. You can see a working example on <a href="https://codepen.io/sb2702/pen/ExZNLZG">Code Pen</a>.  </p>
 
 
 						 <p>For other players, scroll down to the <a class="scrollto" href="#section-3"> web section</a> or see the full API <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">here</a> </p>
