Added links to latest cdn docs

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -192,7 +192,7 @@
 					<p><b>CDN</b>
 					<code><pre>https://cdn.vectorly.io/upscaler/v2/latest/vectorly-upscaler.js</pre></code>
 
-					There are various versions available, including the <code>vectorly-upscaler.js</code> library, as well as plugins for different HTML5 video players. You can find version specific installation instructions <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/">here</a>.
+					There are various versions available, including the <code>vectorly-upscaler.js</code> library, as well as plugins for different HTML5 video players. You can find version specific installation instructions <a href="https://cdn.vectorly.io/upscaler/docs/latest/">here</a>.
 
 				     <section class="docs-section" id="item-2-1">
 						<h2 class="section-heading">Hello World</h2>
@@ -232,7 +232,7 @@
 						 <p>Make sure you add your token, and verify that "Upscaler initialized" is being displayed in the console.log, in order to know that it's working. You can see a working example on <a href="https://codepen.io/sb2702/pen/ExZNLZG">Code Pen</a>.  </p>
 
 
-						 <p>For other players, scroll down to the <a class="scrollto" href="#section-3"> web section</a> or see the full API <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">here</a> </p>
+						 <p>For other players, scroll down to the <a class="scrollto" href="#section-3"> web section</a> or see the full API <a href="https://cdn.vectorly.io/upscaler/docs/latest/">here</a> </p>
 
 					</section><!--//section-->
 
@@ -243,7 +243,7 @@
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Web</h1>
 
-						    <p>For web environments, we've packaged our upscaler as a standalone Javascript library, as well as as plugins to several popular HTML5 video players (see the <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">full API</a> for more detail).</p>
+						    <p>For web environments, we've packaged our upscaler as a standalone Javascript library, as well as as plugins to several popular HTML5 video players (see the <a href="https://cdn.vectorly.io/upscaler/docs/latest/">full API</a> for more detail).</p>
 					</header>
 
 						<h4 class="section-heading" id="item-3-usage">Basic usage</h4>
@@ -272,7 +272,7 @@
 
 
 						<h4 class="section-heading" id="item-3-plugins">Plugins</h4>
-						Besides the <code>vectorly-upscaler.js</code> library, we have several plugins for specific HTML5 players. (see the <a href="https://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0">full API</a> for more detail).
+						Besides the <code>vectorly-upscaler.js</code> library, we have several plugins for specific HTML5 players. (see the <a href="https://cdn.vectorly.io/upscaler/docs/latest/">full API</a> for more detail).
 
 
 						<p>
@@ -426,7 +426,7 @@
 						<pre><code>
    const upscaler = new vectorlyUpscaler(video, {token: '...', network: 'residual_3k_3x', version: '2.1'});
 							 </code></pre>
-						We are constantly releasing new models. You can find a comprehensive list of models <a href="hhttps://deploy-preview-40--vectorly-html5-upscaler.netlify.app/js-docs/@vectorly-io/ai-upscaler/2.0.0-beta.0/global.html#NetworkParams" >here</a>
+						We are constantly releasing new models. You can find a comprehensive list of models <a href="https://cdn.vectorly.io/upscaler/docs/latest/global.html#NetworkParams" >here</a>
 
 
 
