fixed missing nav link

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -182,7 +182,7 @@
 
 
 
-					<p>First,  sign up in the <a href="https://upscaler.vectorly.io"> dashboard </a>to get a  <code>token</code> which, you will need to use the library. Next, you can install the upscaler library via NPM or via CDN</p>
+					<p id="item-2-0">First,  sign up in the <a href="https://upscaler.vectorly.io"> dashboard </a>to get a  <code>token</code> which, you will need to use the library. Next, you can install the upscaler library via NPM or via CDN</p>
 
 
 					<p> <b>NPM</b>
