--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -74,10 +74,17 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-controls">Controls</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-styling">Styling and Scaling</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-ai-models">AI Models</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-low-level">Low level controls</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder mr-2"><i class="fas fa-tablet-alt"></i></span>Mobile</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Android</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">iOS</a></li>
 					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-conferencing"><span class="theme-icon-holder mr-2"><i class="fas fa-phone-alt"></i></span>Video Conferencing</a></li>
+
+					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-webrtc">WebRTC</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-agora">Agora</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-twilio">Twilio</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-daily">Daily.co</a></li>
+
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder mr-2"><i class="fas fa-file-video"></i></span>Demos</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder mr-2"><i class="fas fa-chart-bar"></i></span>Benchmarks</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-1">Framerate</a></li>
@@ -433,6 +440,13 @@
 
 					<br></br>
 
+
+					<h2 class="section-heading" id="item-3-low-level">Low level controls</h2>
+
+					<p>Coming soon</p>
+
+					<br></br>
+
 					<p>If you encounter any issues with these libraries, you can send us a message</p>
 					<a href="email:team@vectorly.io" class="btn btn-warning"><svg class="svg-inline--fa fa-bug fa-w-16 mr-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bug" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M511.988 288.9c-.478 17.43-15.217 31.1-32.653 31.1H424v16c0 21.864-4.882 42.584-13.6 61.145l60.228 60.228c12.496 12.497 12.496 32.758 0 45.255-12.498 12.497-32.759 12.496-45.256 0l-54.736-54.736C345.886 467.965 314.351 480 280 480V236c0-6.627-5.373-12-12-12h-24c-6.627 0-12 5.373-12 12v244c-34.351 0-65.886-12.035-90.636-32.108l-54.736 54.736c-12.498 12.497-32.759 12.496-45.256 0-12.496-12.497-12.496-32.758 0-45.255l60.228-60.228C92.882 378.584 88 357.864 88 336v-16H32.666C15.23 320 .491 306.33.013 288.9-.484 270.816 14.028 256 32 256h56v-58.745l-46.628-46.628c-12.496-12.497-12.496-32.758 0-45.255 12.498-12.497 32.758-12.497 45.256 0L141.255 160h229.489l54.627-54.627c12.498-12.497 32.758-12.497 45.256 0 12.496 12.497 12.496 32.758 0 45.255L424 197.255V256h56c17.972 0 32.484 14.816 31.988 32.9zM257 0c-61.856 0-112 50.144-112 112h224C369 50.144 318.856 0 257 0z"></path></svg>Report Bugs</a>
 
@@ -540,8 +554,8 @@
 						</section><!--//docs-intro-->
 
 
-						<section class="docs-section" id="item-conferencing-1">
-							<h2 class="section-heading">Client Side Upscaling</h2>
+						<section class="docs-section" id="conferencing-webrtc">
+							<h2 class="section-heading">Integration</h2>
 							<p>You can add Vectorly's AI upscaler directly on the client side for one or more clients, which helps improve the video experience for each individual receiver (for example, if the receiver's network speed drops). This option primarily makes sense for <a href="https://webrtchacks.com/sfu-simulcast/">Simulcast SFU</a> and <a href="https://trueconf.com/blog/wiki/mcu-video-conferencing-architecture">MCU</a> architectures, where receivers have the option of recieving multiple quality levels of video.</p>
 
 
@@ -560,8 +574,8 @@
 
 						</section><!--//section-->
 
-						<section class="docs-section" id="item-conferencing-2">
-							<h2 class="section-heading">Client Side Compression</h2>
+						<section class="docs-section" id="conferencing-agora">
+							<h2 class="section-heading">Compression</h2>
 							<p>In pure Peer to Peer architectures or regular <a href="https://webrtcglossary.com/sfu/"> SFU</a> architctures, each broadcaster is only broadcasting one video quality. In these scenarios, you would need to downscale the broadcast video quality for each broadcaster.</p>
 							<p> Doing this makes sense in scenarios where you would want to reduce bandwidth for all participants involved.</p>
 
@@ -611,8 +625,27 @@
 
 						</section><!--//section-->
 
-						<section class="docs-section" id="item-conferencing-3">
-							<h2 class="section-heading">Server Side Upscaling</h2>
+						<section class="docs-section" id="conferencing-twilio">
+							<h2 class="section-heading">Performance</h2>
+
+							<p>One further use case is to upscale and enhance video just from users who are broadcasting video over poor connections. This has the advantage of not having any end-user requirements, but this is only possible in architectures where server-side transcoding is possible. </p>
+
+
+							<p>While we currently don't have a server-side upscaler, it would be very easy to build, and the quality and performance would be much better than for client-side devices. If you'd like to implement server-side upscaling, we'd love to <a href="mailto: team@vectorly"> learn more about your requrements</a></p>
+						</section><!--//section-->
+
+						<section class="docs-section" id="conferencing-daily">
+							<h2 class="section-heading">Performance</h2>
+
+							<p>One further use case is to upscale and enhance video just from users who are broadcasting video over poor connections. This has the advantage of not having any end-user requirements, but this is only possible in architectures where server-side transcoding is possible. </p>
+
+
+							<p>While we currently don't have a server-side upscaler, it would be very easy to build, and the quality and performance would be much better than for client-side devices. If you'd like to implement server-side upscaling, we'd love to <a href="mailto: team@vectorly"> learn more about your requrements</a></p>
+						</section><!--//section-->
+
+
+						<section class="docs-section" id="conferencing-daily">
+							<h2 class="section-heading">Performance</h2>
 
 							<p>One further use case is to upscale and enhance video just from users who are broadcasting video over poor connections. This has the advantage of not having any end-user requirements, but this is only possible in architectures where server-side transcoding is possible. </p>
 
